turbopack/crates/turbopack/tests/node-file-trace/integration/ts-paths/pass/sub-prefix.ts
import { subPrefix } from "sub@";
console.log(subPrefix);
