turbopack/crates/turbopack/tests/node-file-trace/integration/ts-paths/fail/sub-infix.ts
import { subInfix } from "@sub@";
console.log(subInfix);
